@@ -1,5 +1,17 @@
 2016-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Work around MSDN inconsistencies in _finddata_t naming.
+
+	* include/io.h (_finddata64_t, _wfinddata64_): Define them
+	respectively as aberrant alternative data type names for each of...
+	(__finddata64_t, __wfinddata64_t): ...these original names.
+	(_wfinddata32_t): Similarly, define this with...
+	(__wfinddata32_t): ...this alternative name.
+
+	* include/wchar.h (_wfinddata32_t): Correct references in comments.
+
+2016-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Fix a potentially infinite printf() format conversion loop.
 
 	* mingwex/stdio/pformat.c (__pformat_emit_xfloat)
